--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-<h1>{{ title }}</h1>
-<hr>
 <p>
-  Bienvenidos a Angular
-  <br>
-  
-  <app-counter></app-counter>
+  <!-- <app-counter></app-counter>
   <app-hero-component></app-hero-component>
-  <app-hero-list></app-hero-list>
-
+  <app-hero-list></app-hero-list> -->
+  <app-dbz-main-page></app-dbz-main-page>
 </p>
